# odp-platform-qemu-sbsa

./: .dockerignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Common.mk  LICENSE  Makefile  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: build-container.yml  build-drivers.yml  build-os.yml  build.yml  check-submodules.yml  update-submodules.yml
.husky/: pre-commit
bios/: Makefile
common/tools/: build.sh  qemu_bios.sh
docs/: README.md  devcontainer.md  e2e-tests.md  winhec-demo.md
e2e-tests/: .gitignore  Cargo.toml  Makefile  README.md  startup.nsh
e2e-tests/.cargo/: config.toml
e2e-tests/coverage-plugin/: Makefile  coverage.c  qemu-plugin.h
e2e-tests/ffa/: Cargo.toml
e2e-tests/scripts/: check-coverage-threshold.sh  pcs-to-lcov.py  validate-address-window.sh
e2e-tests/test-support/: Cargo.toml
e2e-tests/test-support/src/: lib.rs
e2e-tests/uart-logger/: Cargo.toml
mod/: Makefile
mod-secure-services/: Makefile  README.md
mod-uefi/: Makefile
mod/secure-services/: Makefile
mod/uefi/: Makefile  README.md
os-image/: Makefile
postbuild/: README.md
postbuild/os/: Makefile  README.md
scripts/: README.md  dc-run.sh  push-devcontainer-cache.sh  qemu-ec-wrapper.sh  test-e2e.sh  test-serial.sh  test-sp-ec-link.sh  test-sp-services.sh
scripts/lib/: ec-qemu.sh  host-qemu.sh  sbsa-qemu.sh  swtpm.sh
secure-services/: Makefile
spm/: Makefile
src/: main.rs
test-serial-vdrive/: .gitignore  startup.nsh
tf-a/: Makefile  build.sh
uefi/: Makefile  build.sh
(+64 files in other folders)
