# @file Cargo.toml
#
# Cargo package manifest for shared E2E test support utilities
#
# Copyright (c) Microsoft Corporation.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "test-support"
version = "0.1.0"
edition = "2021"

[dependencies]
ffa = { path = "../ffa" }
log = { version = "0.4", default-features = false }
uart-logger = { path = "../uart-logger" }
uefi = { version = "0.34", features = [
    "panic_handler",
    "alloc",
    "global_allocator",
] }
uuid = { version = "1.0", default-features = false, features = ["v1"] }
